feat(data-1049): do not convert GBFS 3.0 to 2.3 when provider provides GBFS 3.0